complete get requests
